postgres/postgres-exporter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter
  namespace: postgres
  labels:
    app.kubernetes.io/instance: postgres-exporter
    app.kubernetes.io/name: postgres-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: postgres-exporter
      app.kubernetes.io/name: postgres-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: postgres-exporter
        app.kubernetes.io/name: postgres-exporter
    spec:
      containers:
        - name: postgres-exporter
          image: prometheuscommunity/postgres-exporter:latest
          ports:
            - containerPort: 9187
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: postgres
  labels:
    app.kubernetes.io/instance: postgres-exporter
    app.kubernetes.io/name: postgres-exporter
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9187"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app.kubernetes.io/instance: postgres-exporter
    app.kubernetes.io/name: postgres-exporter
  ports:
    - name: http
      port: 9187
      targetPort: 9187
      protocol: TCP
